--- a/src/lib/assets/i18n/dk.json
+++ b/src/lib/assets/i18n/dk.json
@@ -1085,6 +1085,12 @@
     },
     "validate_evaluation_to_correct": {
       "content": "Undskyld,<br>Alle felter skal korrigeres.<br>Tilbage til redigeringsstatus<br>for at korriger."
+    },
+    "users": {
+      "delete": {
+        "content": "TO TRANSLATE - <span class='strong'>Warning,</span><br>Are you sure you want to<br>delete this user ?",
+        "confirm": "TO TRANSLATE - Delete this user"
+      }
     }
   },
   "onboarding": {
