--- a/src/lib/assets/i18n/it.json
+++ b/src/lib/assets/i18n/it.json
@@ -1085,6 +1085,12 @@
     },
     "validate_evaluation_to_correct": {
       "content": "Spiacente,<br>Diversi campi necessitano di correzioni.<br>Torna alla modalità modifica<br>per apportare correzioni."
+    },
+    "users": {
+      "delete": {
+        "content": "TO TRANSLATE - <span class='strong'>Warning,</span><br>Are you sure you want to<br>delete this user ?",
+        "confirm": "TO TRANSLATE - Delete this user"
+      }
     }
   },
   "onboarding": {
