--- a/src/lib/assets/i18n/ro.json
+++ b/src/lib/assets/i18n/ro.json
@@ -1085,6 +1085,12 @@
     },
     "validate_evaluation_to_correct": {
       "content": "Ne pare rău,<br>Câteva câmpuri trebuie corectate.<br>Reveniți la modul editare<br>pentru a face corecții."
+    },
+    "users": {
+      "delete": {
+        "content": "TO TRANSLATE - <span class='strong'>Warning,</span><br>Are you sure you want to<br>delete this user ?",
+        "confirm": "TO TRANSLATE - Delete this user"
+      }
     }
   },
   "onboarding": {
