--- a/src/lib/assets/i18n/ar.json
+++ b/src/lib/assets/i18n/ar.json
@@ -1085,6 +1085,12 @@
     },
     "validate_evaluation_to_correct": {
       "content": "عذراً،<br>ينبغي تصحيح عدة خانات.<br>الرجوع إلى التعديل<br>من أجل القيام بالتصحيح."
+    },
+    "users": {
+      "delete": {
+        "content": "TO TRANSLATE - <span class='strong'>Warning,</span><br>Are you sure you want to<br>delete this user ?",
+        "confirm": "TO TRANSLATE - Delete this user"
+      }
     }
   },
   "onboarding": {
