--- a/src/lib/assets/i18n/en.json
+++ b/src/lib/assets/i18n/en.json
@@ -1085,6 +1085,12 @@
     },
     "validate_evaluation_to_correct": {
       "content": "Sorry,<br>Several fields must be corrected.<br>Return to edition mode<br>to make corrections."
+    },
+    "users": {
+      "delete": {
+        "content": "<span class='strong'>Warning,</span><br>Are you sure you want to<br>delete this user ?",
+        "confirm": "Delete this user"
+      }
     }
   },
   "onboarding": {
