--- a/src/lib/assets/i18n/hu.json
+++ b/src/lib/assets/i18n/hu.json
@@ -1085,6 +1085,12 @@
     },
     "validate_evaluation_to_correct": {
       "content": "Sajnáljuk, térjen vissza a szerkesztési módba további javítások elvégzéséhez."
+    },
+    "users": {
+      "delete": {
+        "content": "TO TRANSLATE - <span class='strong'>Warning,</span><br>Are you sure you want to<br>delete this user ?",
+        "confirm": "TO TRANSLATE - Delete this user"
+      }
     }
   },
   "onboarding": {
