--- a/src/lib/assets/i18n/sv.json
+++ b/src/lib/assets/i18n/sv.json
@@ -1085,6 +1085,12 @@
     },
     "validate_evaluation_to_correct": {
       "content": "Tyvärr<br> Flera fält behöver korrigeras.<br>Återgå till bearbetningsläge<br>för att korrigera."
+    },
+    "users": {
+      "delete": {
+        "content": "TO TRANSLATE - <span class='strong'>Warning,</span><br>Are you sure you want to<br>delete this user ?",
+        "confirm": "TO TRANSLATE - Delete this user"
+      }
     }
   },
   "onboarding": {
