--- a/src/lib/assets/i18n/fr.json
+++ b/src/lib/assets/i18n/fr.json
@@ -1662,6 +1662,13 @@
     "access_locked": {
         "false": "Activé",
         "true": "En attente d'activation"
+    },
+    "role": {
+      "label": "Rôle(s)",
+      "author": "Auteur",
+      "evaluator": "Évaluateur",
+      "validator": "Validateur",
+      "guest": "Invité"
     }
   },
   "validation_page": {
